--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,12 @@ button{
     border-radius: 40px;
 
 }
+ul li{
+    list-style: none;
+    padding: 12px 8px  12px 50px;
+    user-select: none;
+    cursor: pointer;
+    
+    font-size: 17px;
+    
+}
